--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -2,13 +2,66 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "from langchain.chat_models import ChatOpenAI\n",
+    "from langchain.prompts import PromptTemplate, ChatPromptTemplate"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'The distance between Korea and Japan varies depending on the specific locations being measured. On average, the distance between Seoul, South Korea and Tokyo, Japan is approximately 1,100 kilometers (683 miles) when measured in a straight line. However, the actual distance can be longer when taking into account the specific locations within each country and the mode of transportation being used.'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "chat = ChatOpenAI(model_name=\"gpt-3.5-turbo\", temperature=0.1)\n",
     "\n",
-    "chat = ChatOpenAI(model_name=\"gpt-3.5-turbo\", temperature=0.1)\n"
+    "template = PromptTemplate.from_template(\"What is the distance between {country_a} and {country_b}\")\n",
+    "\n",
+    "prompt = template.format(country_a = \"Korea\",country_b=\"Japan\")\n",
+    "\n",
+    "\n",
+    "chat.predict(prompt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "AIMessage(content='한국과 일본 사이의 거리는 약 900km입니다. 제 이름은 김입니다.')"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "template = ChatPromptTemplate.from_messages([\n",
+    "    (\"system\",\"You are a geography expert. And you only reply in {language}\"),\n",
+    "    (\"ai\",\"Ciao, mi chiamo {name}!\"),\n",
+    "    (\"human\",\"What is the distance between {country_a} and {country_b}. Also, what is your name? \")\n",
+    "])\n",
+    "\n",
+    "prompt = template.format_messages(language=\"Korean and Japanese Both\",name=\"kim\",country_a = \"Korea\",country_b=\"Japan\")\n",
+    "chat.predict_messages(prompt)"
    ]
   },
   {
@@ -16,18 +69,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "from langchain.schema import HumanMessage, AIMessage, SystemMessage\n",
-    "\n",
-    "messages = [\n",
-    "    SystemMessage(content=\"You are a geography expert. And you only reply in Italy\"),\n",
-    "    AIMessage(content=\"Ciao, mi chiamo Paolo!\"),\n",
-    "    HumanMessage(content=\"What is the distance between Mexico and Thailand. Also, what is your name?\")\n",
-    "\n",
-    "]\n",
-    "\n",
-    "chat.predict_messages(messages)"
-   ]
+   "source": []
   }
  ],
  "metadata": {
