#3.3 OutputParser and LCEL (11:51)

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -66,6 +66,65 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Hello', 'how', 'are', 'you']"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from langchain.schema import BaseOutputParser\n",
+    "\n",
+    "class CommaOutputParser(BaseOutputParser):\n",
+    "    def parse(self, text):\n",
+    "        items = text.strip().split(\",\")\n",
+    "\n",
+    "        return list(map(str.strip,items))\n",
+    "\n",
+    "p = CommaOutputParser()\n",
+    "p.parse(\"Hello, how, are, you\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Pikachu', 'Charizard', 'Bulbasaur', 'Squirtle', 'Jigglypuff']"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "template = ChatPromptTemplate.from_messages([\n",
+    "    (\"system\",\"You are a list gernating machine. Everything you are asked will be answered with a comma separated list of max {max_items}. Do Not reply with anything else.\",),\n",
+    "    (\"human\",\"{question},\"),\n",
+    "])\n",
+    "\n",
+    "chain = template | chat | CommaOutputParser()\n",
+    "\n",
+    "chain.invoke({\n",
+    "    \"max_items\":5,\n",
+    "    \"question\":\"what are the pokemons?\"\n",
+    "})\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
