--- a/langchain_3_1.ipynb
+++ b/langchain_3_1.ipynb
@@ -2,12 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "from langchain.chat_models import ChatOpenAI\n",
-    "from langchain.prompts import PromptTemplate, ChatPromptTemplate"
+    "from langchain.prompts import PromptTemplate, ChatPromptTemplate\n",
+    "chat = ChatOpenAI(model_name=\"gpt-3.5-turbo\", temperature=0.1)"
    ]
   },
   {
@@ -18,7 +19,7 @@
     {
      "data": {
       "text/plain": [
-       "'The distance between Korea and Japan varies depending on the specific locations being measured. On average, the distance between Seoul, South Korea and Tokyo, Japan is approximately 1,100 kilometers (683 miles) when measured in a straight line. However, the actual distance can be longer when taking into account the specific locations within each country and the mode of transportation being used.'"
+       "'The distance between Korea and Japan varies depending on the specific locations being measured. On average, the distance between Seoul, South Korea and Tokyo, Japan is approximately 1,100 kilometers (683 miles) when measured in a straight line. However, the actual distance can be longer when taking into account the specific cities or regions being compared.'"
       ]
      },
      "execution_count": 2,
@@ -27,7 +28,7 @@
     }
    ],
    "source": [
-    "chat = ChatOpenAI(model_name=\"gpt-3.5-turbo\", temperature=0.1)\n",
+    "\n",
     "\n",
     "template = PromptTemplate.from_template(\"What is the distance between {country_a} and {country_b}\")\n",
     "\n",
