--- a/langchain_4_1.ipynb
+++ b/langchain_4_1.ipynb
@@ -2,33 +2,30 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "AI: \n",
-      "I know that North Korea is a country located in East Asia, with its capital in Pyongyang. The official language is Korean, and the currency is the North Korean won. The country is known for its strict government control and isolation from the rest of the world."
+     "ename": "TypeError",
+     "evalue": "expected str, got list",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[9], line 46\u001b[0m\n\u001b[0;32m      7\u001b[0m chat \u001b[38;5;241m=\u001b[39m ChatOpenAI(\n\u001b[0;32m      8\u001b[0m     model_name\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mgpt-3.5-turbo\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[0;32m      9\u001b[0m     temperature\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0.1\u001b[39m,\n\u001b[0;32m     10\u001b[0m     streaming\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m,\n\u001b[0;32m     11\u001b[0m     callbacks\u001b[38;5;241m=\u001b[39m[StreamingStdOutCallbackHandler()],\n\u001b[0;32m     12\u001b[0m )\n\u001b[0;32m     13\u001b[0m examples \u001b[38;5;241m=\u001b[39m [\n\u001b[0;32m     14\u001b[0m     {\n\u001b[0;32m     15\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcountry\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mFrance\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     43\u001b[0m     },\n\u001b[0;32m     44\u001b[0m ]\n\u001b[1;32m---> 46\u001b[0m example_prompt \u001b[38;5;241m=\u001b[39m \u001b[43mChatPromptTemplate\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfrom_template\u001b[49m\u001b[43m(\u001b[49m\u001b[43m[\u001b[49m\n\u001b[0;32m     47\u001b[0m \u001b[43m    \u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mhuman\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mWhat do you know about \u001b[39;49m\u001b[38;5;132;43;01m{country}\u001b[39;49;00m\u001b[38;5;124;43m?\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m     48\u001b[0m \u001b[43m    \u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mai\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;132;43;01m{answer}\u001b[39;49;00m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m     49\u001b[0m \u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     51\u001b[0m example_prompt2 \u001b[38;5;241m=\u001b[39m FewShotChatMessagePromptTemplate(\n\u001b[0;32m     52\u001b[0m     example_prompt\u001b[38;5;241m=\u001b[39mexample_prompt,\n\u001b[0;32m     53\u001b[0m     examples\u001b[38;5;241m=\u001b[39mexamples,\n\u001b[0;32m     54\u001b[0m )\n\u001b[0;32m     55\u001b[0m final_prompt \u001b[38;5;241m=\u001b[39m ChatPromptTemplate\u001b[38;5;241m.\u001b[39mfrom_messages([\n\u001b[0;32m     56\u001b[0m     (\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124msysrem\u001b[39m\u001b[38;5;124m\"\u001b[39m,\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mYou are a food expert\u001b[39m\u001b[38;5;124m\"\u001b[39m),\n\u001b[0;32m     57\u001b[0m     example_prompt2,\n\u001b[0;32m     58\u001b[0m     (\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mhuman\u001b[39m\u001b[38;5;124m\"\u001b[39m,\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mWhat do you know about \u001b[39m\u001b[38;5;132;01m{country}\u001b[39;00m\u001b[38;5;124m?\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     59\u001b[0m \n\u001b[0;32m     60\u001b[0m ])\n",
+      "File \u001b[1;32mc:\\Users\\kimjeongyeon\\Documents\\GitHub\\Fullstack-GPT\\env\\Lib\\site-packages\\langchain\\prompts\\chat.py:463\u001b[0m, in \u001b[0;36mChatPromptTemplate.from_template\u001b[1;34m(cls, template, **kwargs)\u001b[0m\n\u001b[0;32m    449\u001b[0m \u001b[38;5;129m@classmethod\u001b[39m\n\u001b[0;32m    450\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mfrom_template\u001b[39m(\u001b[38;5;28mcls\u001b[39m, template: \u001b[38;5;28mstr\u001b[39m, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs: Any) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m ChatPromptTemplate:\n\u001b[0;32m    451\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"Create a chat prompt template from a template string.\u001b[39;00m\n\u001b[0;32m    452\u001b[0m \n\u001b[0;32m    453\u001b[0m \u001b[38;5;124;03m    Creates a chat template consisting of a single message assumed to be from\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    461\u001b[0m \u001b[38;5;124;03m        A new instance of this class.\u001b[39;00m\n\u001b[0;32m    462\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[1;32m--> 463\u001b[0m     prompt_template \u001b[38;5;241m=\u001b[39m \u001b[43mPromptTemplate\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfrom_template\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtemplate\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    464\u001b[0m     message \u001b[38;5;241m=\u001b[39m HumanMessagePromptTemplate(prompt\u001b[38;5;241m=\u001b[39mprompt_template)\n\u001b[0;32m    465\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mcls\u001b[39m\u001b[38;5;241m.\u001b[39mfrom_messages([message])\n",
+      "File \u001b[1;32mc:\\Users\\kimjeongyeon\\Documents\\GitHub\\Fullstack-GPT\\env\\Lib\\site-packages\\langchain\\prompts\\prompt.py:232\u001b[0m, in \u001b[0;36mPromptTemplate.from_template\u001b[1;34m(cls, template, template_format, partial_variables, **kwargs)\u001b[0m\n\u001b[0;32m    195\u001b[0m \u001b[38;5;129m@classmethod\u001b[39m\n\u001b[0;32m    196\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mfrom_template\u001b[39m(\n\u001b[0;32m    197\u001b[0m     \u001b[38;5;28mcls\u001b[39m,\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    202\u001b[0m     \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs: Any,\n\u001b[0;32m    203\u001b[0m ) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m PromptTemplate:\n\u001b[0;32m    204\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"Load a prompt template from a template.\u001b[39;00m\n\u001b[0;32m    205\u001b[0m \n\u001b[0;32m    206\u001b[0m \u001b[38;5;124;03m    *Security warning*: Prefer using `template_format=\"f-string\"` instead of\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    229\u001b[0m \u001b[38;5;124;03m        The prompt template loaded from the template.\u001b[39;00m\n\u001b[0;32m    230\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[1;32m--> 232\u001b[0m     input_variables \u001b[38;5;241m=\u001b[39m \u001b[43mget_template_variables\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtemplate\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtemplate_format\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    233\u001b[0m     _partial_variables \u001b[38;5;241m=\u001b[39m partial_variables \u001b[38;5;129;01mor\u001b[39;00m {}\n\u001b[0;32m    235\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m _partial_variables:\n",
+      "File \u001b[1;32mc:\\Users\\kimjeongyeon\\Documents\\GitHub\\Fullstack-GPT\\env\\Lib\\site-packages\\langchain\\prompts\\base.py:144\u001b[0m, in \u001b[0;36mget_template_variables\u001b[1;34m(template, template_format)\u001b[0m\n\u001b[0;32m    141\u001b[0m     input_variables \u001b[38;5;241m=\u001b[39m _get_jinja2_variables_from_template(template)\n\u001b[0;32m    142\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m template_format \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mf-string\u001b[39m\u001b[38;5;124m\"\u001b[39m:\n\u001b[0;32m    143\u001b[0m     input_variables \u001b[38;5;241m=\u001b[39m {\n\u001b[1;32m--> 144\u001b[0m         v \u001b[38;5;28;01mfor\u001b[39;00m _, v, _, _ \u001b[38;5;129;01min\u001b[39;00m \u001b[43mFormatter\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mparse\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtemplate\u001b[49m\u001b[43m)\u001b[49m \u001b[38;5;28;01mif\u001b[39;00m v \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[0;32m    145\u001b[0m     }\n\u001b[0;32m    146\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m    147\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mUnsupported template format: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mtemplate_format\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n",
+      "File \u001b[1;32mC:\\Python311\\Lib\\string.py:288\u001b[0m, in \u001b[0;36mFormatter.parse\u001b[1;34m(self, format_string)\u001b[0m\n\u001b[0;32m    287\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mparse\u001b[39m(\u001b[38;5;28mself\u001b[39m, format_string):\n\u001b[1;32m--> 288\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m _string\u001b[38;5;241m.\u001b[39mformatter_parser(format_string)\n",
+      "\u001b[1;31mTypeError\u001b[0m: expected str, got list"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "AIMessageChunk(content='AI: \\nI know that North Korea is a country located in East Asia, with its capital in Pyongyang. The official language is Korean, and the currency is the North Korean won. The country is known for its strict government control and isolation from the rest of the world.')"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
     "from langchain.chat_models import ChatOpenAI\n",
-    "from langchain.prompts.few_shot import FewShotPromptTemplate\n",
+    "from langchain.prompts.few_shot import FewShotChatMessagePromptTemplate\n",
     "from langchain.callbacks import StreamingStdOutCallbackHandler\n",
-    "from langchain.prompts import PromptTemplate\n",
+    "from langchain.prompts import ChatPromptTemplate\n",
     "\n",
     "\n",
     "chat = ChatOpenAI(\n",
@@ -37,50 +34,56 @@
     "    streaming=True,\n",
     "    callbacks=[StreamingStdOutCallbackHandler()],\n",
     ")\n",
-    "\n",
     "examples = [\n",
     "    {\n",
-    "        \"question\": \"What do you know about France?\",\n",
+    "        \"country\": \"France\",\n",
     "        \"answer\": \"\"\"\n",
-    "Here is what I know:\n",
-    "Capital: Paris\n",
-    "Language: French\n",
-    "Food: Wine and Cheese\n",
-    "Currency: Euro\n",
-    "\"\"\",\n",
+    "        Here is what I know:\n",
+    "        Capital: Paris\n",
+    "        Language: French\n",
+    "        Food: Wine and Cheese\n",
+    "        Currency: Euro\n",
+    "        \"\"\",\n",
     "    },\n",
     "    {\n",
-    "        \"question\": \"What do you know about Italy?\",\n",
+    "        \"country\": \"Italy\",\n",
     "        \"answer\": \"\"\"\n",
-    "I know this:\n",
-    "Capital: Rome\n",
-    "Language: Italian\n",
-    "Food: Pizza and Pasta\n",
-    "Currency: Euro\n",
-    "\"\"\",\n",
+    "        I know this:\n",
+    "        Capital: Rome\n",
+    "        Language: Italian\n",
+    "        Food: Pizza and Pasta\n",
+    "        Currency: Euro\n",
+    "        \"\"\",\n",
     "    },\n",
     "    {\n",
-    "        \"question\": \"What do you know about Greece?\",\n",
+    "        \"country\": \"Greece\",\n",
     "        \"answer\": \"\"\"\n",
-    "I know this:\n",
-    "Capital: Athens\n",
-    "Language: Greek\n",
-    "Food: Souvlaki and Feta Cheese\n",
-    "Currency: Euro\n",
-    "\"\"\",\n",
+    "        I know this:\n",
+    "        Capital: Athens\n",
+    "        Language: Greek\n",
+    "        Food: Souvlaki and Feta Cheese\n",
+    "        Currency: Euro\n",
+    "        \"\"\",\n",
     "    },\n",
     "]\n",
     "\n",
-    "example_prompt = PromptTemplate.from_template(\"Haman:{question}\\nAI:{answer}\")\n",
+    "example_prompt = ChatPromptTemplate.from_template(\n",
+    "    [(\"human\", \"What do you know about {country}?\"), (\"ai\", \"{answer}\")]\n",
+    ")\n",
     "\n",
-    "prompt = FewShotPromptTemplate(\n",
+    "example_prompt2 = FewShotChatMessagePromptTemplate(\n",
     "    example_prompt=example_prompt,\n",
     "    examples=examples,\n",
-    "    suffix=\"Human: What do you know about {country}?\",\n",
-    "    input_variables=[\"country\"],\n",
     ")\n",
-    "chain = prompt | chat\n",
-    "chain.invoke({\"country\": \"North Korea\"})"
+    "final_prompt = ChatPromptTemplate.from_messages(\n",
+    "    [\n",
+    "        (\"sysrem\", \"You are a food expert\"),\n",
+    "        example_prompt2,\n",
+    "        (\"human\", \"What do you know about {country}?\"),\n",
+    "    ]\n",
+    ")\n",
+    "chain = final_prompt | chat\n",
+    "chain.invoke({\"country\": \"Korea\"})"
    ]
   },
   {
