--- a/langchain_5_1.ipynb
+++ b/langchain_5_1.ipynb
@@ -27,6 +27,302 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain.memory import ConversationBufferWindowMemory\n",
+    "\n",
+    "memory = ConversationBufferWindowMemory(\n",
+    "    return_messages=True,\n",
+    "    k=4,\n",
+    ")\n",
+    "\n",
+    "\n",
+    "def add_message(input, output):\n",
+    "    memory.save_context({\"input\": input}, {\"output\": output})\n",
+    "\n",
+    "\n",
+    "add_message(1, 1)\n",
+    "add_message(2, 2)\n",
+    "add_message(3, 3)\n",
+    "add_message(4, 4)\n",
+    "add_message(5, 5)\n",
+    "add_message(6, 6)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'history': [HumanMessage(content='3'),\n",
+       "  AIMessage(content='3'),\n",
+       "  HumanMessage(content='4'),\n",
+       "  AIMessage(content='4'),\n",
+       "  HumanMessage(content='5'),\n",
+       "  AIMessage(content='5'),\n",
+       "  HumanMessage(content='6'),\n",
+       "  AIMessage(content='6')]}"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "windowMemory.load_memory_variables({})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain.memory import ConversationSummaryMemory\n",
+    "from langchain.chat_models import ChatOpenAI\n",
+    "\n",
+    "llm = ChatOpenAI(temperature=0.1)\n",
+    "memory = ConversationSummaryMemory(llm=llm)\n",
+    "\n",
+    "\n",
+    "def add_message(input, output):\n",
+    "    memory.save_context({\"input\": input}, {\"output\": output})\n",
+    "\n",
+    "\n",
+    "def get_history():\n",
+    "    return memory.load_memory_variables({})\n",
+    "\n",
+    "\n",
+    "add_message(\n",
+    "    \"spaceX backend sw engineer introduction.\",\n",
+    "    \"At SpaceX, we’re leveraging our experience in building rockets and spacecraft to deploy Starlink, the world’s most advanced broadband internet system. Starlink is the world’s largest satellite constellation and is providing fast, reliable internet to 2M+ users worldwide.\",\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "add_message(\n",
+    "    \"more plz\",\n",
+    "    \"We design, build, test, and operate all parts of the system – thousands of satellites, consumer receivers that allow users to connect within minutes of unboxing, and the software that brings it all together. We’ve only begun to scratch the surface of Starlink’s potential global impact and are looking for best-in-class engineers to help maximize Starlink’s utility for communities and businesses around the globe.\",\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'history': \"The human asks for an introduction to a SpaceX backend software engineer. The AI explains that SpaceX is using its expertise in building rockets and spacecraft to deploy Starlink, the world's most advanced broadband internet system, which is currently serving over 2 million users globally. SpaceX designs, builds, tests, and operates all parts of the system, including satellites, consumer receivers, and software. They are looking for engineers to help maximize Starlink's impact globally.\"}"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_history()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain.memory import ConversationSummaryBufferMemory\n",
+    "from langchain.chat_models import ChatOpenAI\n",
+    "\n",
+    "llm = ChatOpenAI(temperature=0.1)\n",
+    "memory = ConversationSummaryBufferMemory(\n",
+    "    llm=llm,\n",
+    "    max_token_limit=150,\n",
+    "    return_messages=True,\n",
+    ")\n",
+    "add_message(\n",
+    "    \"spaceX backend sw engineer introduction.\",\n",
+    "    \"At SpaceX, we’re leveraging our experience in building rockets and spacecraft to deploy Starlink, the world’s most advanced broadband internet system. Starlink is the world’s largest satellite constellation and is providing fast, reliable internet to 2M+ users worldwide.\",\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'history': [HumanMessage(content='spaceX backend sw engineer introduction.'),\n",
+       "  AIMessage(content='At SpaceX, we’re leveraging our experience in building rockets and spacecraft to deploy Starlink, the world’s most advanced broadband internet system. Starlink is the world’s largest satellite constellation and is providing fast, reliable internet to 2M+ users worldwide.')]}"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_history()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "add_message(\n",
+    "    \"more plz\",\n",
+    "    \"We design, build, test, and operate all parts of the system – thousands of satellites, consumer receivers that allow users to connect within minutes of unboxing, and the software that brings it all together. We’ve only begun to scratch the surface of Starlink’s potential global impact and are looking for best-in-class engineers to help maximize Starlink’s utility for communities and businesses around the globe.\",\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'history': [SystemMessage(content=\"The human asks for an introduction to a SpaceX backend software engineer. The AI explains that SpaceX is using its expertise in building rockets and spacecraft to deploy Starlink, the world's most advanced broadband internet system, which is currently serving over 2 million users globally.\"),\n",
+       "  HumanMessage(content='more plz'),\n",
+       "  AIMessage(content='We design, build, test, and operate all parts of the system – thousands of satellites, consumer receivers that allow users to connect within minutes of unboxing, and the software that brings it all together. We’ve only begun to scratch the surface of Starlink’s potential global impact and are looking for best-in-class engineers to help maximize Starlink’s utility for communities and businesses around the globe.')]}"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_history()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "add_message(\n",
+    "    \"who is the CEO of spaceX?\",\n",
+    "    \"Elon Musk\",\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'history': [SystemMessage(content=\"The human asks for an introduction to a SpaceX backend software engineer. The AI explains that SpaceX is using its expertise in building rockets and spacecraft to deploy Starlink, the world's most advanced broadband internet system, which is currently serving over 2 million users globally.\"),\n",
+       "  HumanMessage(content='more plz'),\n",
+       "  AIMessage(content='We design, build, test, and operate all parts of the system – thousands of satellites, consumer receivers that allow users to connect within minutes of unboxing, and the software that brings it all together. We’ve only begun to scratch the surface of Starlink’s potential global impact and are looking for best-in-class engineers to help maximize Starlink’s utility for communities and businesses around the globe.'),\n",
+       "  HumanMessage(content='who is the CEO of spaceX?'),\n",
+       "  AIMessage(content='Elon Musk')]}"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_history()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain.memory import ConversationKGMemory\n",
+    "from langchain.chat_models import ChatOpenAI\n",
+    "\n",
+    "llm = ChatOpenAI(temperature=0.1)\n",
+    "memory = ConversationKGMemory(\n",
+    "    llm=llm,\n",
+    "    return_messages=True,\n",
+    ")\n",
+    "add_message(\n",
+    "    \"Hi I'm Jeongyeon, I live in Korea\",\n",
+    "    \"Wow That is so cool!\",\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'history': [SystemMessage(content='On Jeongyeon: Jeongyeon lives in Korea.')]}"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "memory.load_memory_variables({\"input\": \"who is jeongyeon\"})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "add_message(\n",
+    "    \"Jeongyeon likes kimchi\",\n",
+    "    \"Wow That is so cool!\",\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'history': [SystemMessage(content='On Jeongyeon: Jeongyeon lives in Korea. Jeongyeon likes kimchi.')]}"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "memory.load_memory_variables({\"input\": \"what does Jeongyeon like\"})"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
